work/20230216/multi-path-ingress/myapp-svc-mpath-np1.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-mpath-np1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    #nodePort 설정 X 시 랜덤
  selector:
    app: myapp-rs-mpath-web1
