work/20230216/multi-path-ingress/myapp-ing-multi-paths-02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ing-mpath
spec:
  defaultBackend:
    service:
      name: myapp-svc-np
      port:
        number: 80
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /web1
        pathType: Prefix
        backend:
          service:
            # myapp-svc-ext0np1 대신 myapp-svc-mpath-np1
            name: myapp-svc-mpath-np1
            port:
              number: 80
      - path: /web2
        pathType: Prefix
        backend:
          service:
            name: myapp-svc-mpath-np2
            port:
              number: 80
